Fix logo rendering on mobile

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -241,7 +241,6 @@ body {
 .page__hero-image {
   width: 65vw;
   max-width: max-content;
-  height: fit-content;
   -ms-interpolation-mode: bicubic;
 }
 
